# sfml-snake

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Snake.sln  Snake.vcxproj  Snake.vcxproj.filters  game
Screenshots/: Thumbs.db
header/: game.h
include/GameMenu/: GameMenu.h
lib/: GameMenu.lib
src/: engine.h  food.cpp  food.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h
src/Game-core/: food.cpp  food.h  game.cpp  game.h  snake.cpp  snake.h  sound.cpp  sound.h
src/UI/: MainMenu.cpp  MainMenu.h
src/core/: engine.h  food.cpp  food.h  game.cpp  game.h  snake.cpp  snake.h
src/ui/: MainMenu.cpp  MainMenu.h  TipWindow.cpp  TipWindow.h
